k8s-new/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: backend
    name: backend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
            - image: 509271331284.dkr.ecr.us-east-1.amazonaws.com/teinformatech-backend
              imagePullPolicy: Always
              name: backend
            imagePullSecrets:
                - name: regcred
