k8s-new/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: backend
    name: backend-svc
spec:
    ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
    selector:
        app: backend
    type: ClusterIP
